Bug 222689 - Tool tip systray of kopete icon missing
Summary: Tool tip systray of kopete icon missing
Status: RESOLVED FIXED
Alias: None
Product: kopete
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Unspecified
: NOR normal
Target Milestone: ---
Assignee: Kopete Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-01-14 12:27 UTC by BRULE Herman
Modified: 2010-09-07 22:50 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
screenshot (212.06 KB, image/png)
2010-01-14 12:28 UTC, BRULE Herman
Details

Note You need to log in before you can comment on or make changes to this bug.
Description BRULE Herman 2010-01-14 12:27:17 UTC
Version:            (using Devel)
Installed from:    Compiled sources

Hello, icon in systray icon is missing. See the screenshot.
Thanks to solve it.
I use kde 4.3.90 under gentoo.
Comment 1 BRULE Herman 2010-01-14 12:28:06 UTC
Created attachment 39881 [details]
screenshot
Comment 2 Dario Andres 2010-01-20 15:46:39 UTC
The code for the icons seems special...
http://lxr.kde.org/source/KDE/kdenetwork/kopete/kopete/kopetewindow.cpp#1040
Comment 3 Panagiotis Papadopoulos 2010-03-05 18:39:32 UTC
I can confirm this bug with KDE 4.4.0 on OpenSuse
Comment 4 Lamarque V. Souza 2010-09-03 02:16:25 UTC
I created a patch to fix this problem here http://reviewboard.kde.org/r/5226/

Please try it, report problems here and if there is not objection I will commit the patch in a few weeks.
Comment 5 Lamarque V. Souza 2010-09-06 16:25:26 UTC
Patch commited, someone please close this bug.
Comment 6 Panagiotis Papadopoulos 2010-09-06 16:33:04 UTC
I assume the patch works fine :-)
(can’t test it myself atm…)
Comment 7 Lamarque V. Souza 2010-09-07 22:50:03 UTC
SVN commit 1172692 by lvsouza:

Backport 1170480 and 1172124 by lvsouza from trunk to the 4.5 branch:

1170480: Use icon path directly with KStatusNotifierItem instead of using img src=\"kopete-account-icon:%3:%4\"
since kopete-account-icon does not work with KStatusNotifierItem.
CCBUG: 222689

1172124: System tray tooltip: sort accounts by online status to make it easier to read
their status when user has several accounts.



 M  +12 -2     kopete/kopetewindow.cpp  
 M  +7 -1      libkopete/kopeteaccount.cpp  
 M  +10 -0     libkopete/kopeteaccount.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1172692