Use icon path directly with KStatusNotifierItem instead of using img src=\"kopete-account-icon:%3:%4\" since kopete-account-icon does not work with KStatusNotifierItem.

BUG: 222689

svn path=/trunk/KDE/kdenetwork/kopete/; revision=1172124